New Update and Added

--- a/LibrarrySystem/appsettings.json
+++ b/LibrarrySystem/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "LibrarryDB": "Data Source=FERDINAND\\SQL2016; Database=HNHSLS; Integrated Security = True"
+  }
 }
