--- a/LibrarrySystem/LibrarrySystem.csproj
+++ b/LibrarrySystem/LibrarrySystem.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ServicesController\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
