Design and add record data

--- a/LibrarrySystem/LibrarrySystem.csproj
+++ b/LibrarrySystem/LibrarrySystem.csproj
@@ -31,4 +31,8 @@
     <AdditionalDesignTimeBuildInput Remove="FakesAssemblies\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MODELS\MODELS.csproj" />
+  </ItemGroup>
+
 </Project>
